--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -41,7 +41,8 @@
 	\title{Seminararbeit}
 	\subtitle{Sensorik-gestützte Robotik-Systeme zur Automatisierung landwirtschaftlicher Prozesse}
 	\author{Nico Elsner\\
-	Studiengang: Robotik}
+	Studiengang: Robotik\\
+	Technische Hochschule Ingolstadt}
 	\date{\today}
 	\maketitle
 	\tableofcontents
