--- a/kapitel/drohnen.tex
+++ b/kapitel/drohnen.tex
@@ -8,7 +8,7 @@ Je nach Aufgabe und Feldgröße benötigt ein Landwirt hierfür mehrere kostbare
 	\label{fig:sprühdrohne}
 \end{figure}
 
-Die Drohne kann hierbei aus geringer Höhe die entsprechenden Flüssigkeiten über eine Düse ausbringen.
+Die Drohne in Abbildung \ref{fig:sprühdrohne} kann hierbei aus geringer Höhe die entsprechenden Flüssigkeiten über eine Düse ausbringen.
 Das kann durch Routenplanung komplett automatisiert passieren. 
 Lediglich ein Flüssigkeitstank ist hier benötigt, welcher jedoch innerhalb weniger Minuten vom Landwirt an einer fest vorgegebenen Stelle platziert werden kann.
 Somit hat die Drohne einen festen Bezugspunkt für das Auffüllen der Flüssigkeit, ähnlich einer Ladestation eines Rasenmähers.
