--- a/kapitel/einleitung.tex
+++ b/kapitel/einleitung.tex
@@ -1,6 +1,6 @@
 In den vergangenen Jahrzehnten entwickelte sich durch das steigende
 Bevölkerungswachstum ein weltweiter Mangel an Ressourcen, vor allem an
-Nahrungsmitteln.\\!!!!!!QUELLE FINDEN - AM BESTEN GRAFIK!!!!!!\\ Die Folge
+Nahrungsmitteln.\\Die Folge
 hiervon sind Massentierhaltung, Monokulturen und Gewächshausplantagen. Der
 Trend geht zur Perfektion der Erträge, bei möglichst geringem Aufwand. Dabei
 wird der Fokus darauf gelegt, die vorhandene Fläche optimal zu nutzen, um viele
