--- a/kapitel/hauptteil.tex
+++ b/kapitel/hauptteil.tex
@@ -1,13 +1,44 @@
-In der Landwirtschaft gibt es viele Prozesse, die immer gleich sind. Solche
-Aufgaben sind perfekt dafür geeignet, um mithilfe von sensorbasierter Robotik
-automatisiert zu werden. Zudem hat man bei Feldern, Äckern, etc. immer feste
-Ortspunkte und kann somit sehr gut mit den globalen GPS Koordinaten arbeiten.
-Im Folgenden wird auf die Grundlagen der benötigten Sensoren, sowie deren
-Flächenabdeckungsmöglichkeiten eingegangen. Zudem werde ich einige bereits
-existierende Robotersysteme vorstellen und einen Ausblick geben, wie diese auf
-Industriegröße skaliert werden können und wo sie bereits Anwendung finden. Im
-weiteren Verlauf wird dann noch der immer weitverbreitetere Aspekt der
-künstlichen Intelligenz aufgegriffen und der Bezug zur Landwirtschaft
-hergestellt. Das Ende der Arbeit fässt die gesammelten Erkenntnisse zusammen
-und gibt eine Zukunftsprognose zum Thema Automatisierung der Landwirtschaft
-durch sensorbasierte Robotik.
+In der Landwirtschaft gibt es viele wiederkehrende Prozesse, die sich
+hervorragend für die Automatisierung mittels sensorbasierter Robotik eignen.
+Diese Technologie ermöglicht es, Aufgaben wie das Pflanzen, Bewässern, Düngen
+und Ernten von Feldern effizienter und präziser durchzuführen. Ein großer
+Vorteil der Landwirtschaft ist, dass Felder, Äcker und andere
+landwirtschaftliche Flächen feste Ortspunkte haben, wodurch die Verwendung
+globaler GPS-Koordinaten eine präzise Navigation und Steuerung von Robotern
+ermöglicht.
+
+Die Grundlage für die Automatisierung in der Landwirtschaft bilden verschiedene
+Sensoren. Zum Beispiel können Kameras eingesetzt werden, um das Wachstum von
+Pflanzen zu überwachen, Schädlinge zu erkennen oder den Reifegrad von Früchten
+zu bestimmen. Bodensensoren können wichtige Informationen wie
+Feuchtigkeitsgehalt, pH-Wert und Nährstoffgehalt des Bodens liefern, um eine
+optimale Bewässerung und Düngung zu gewährleisten. Darüber hinaus können
+Wetterdaten und Umgebungssensoren genutzt werden, um Entscheidungen über
+Bewässerung, Schädlingsbekämpfung und andere landwirtschaftliche Maßnahmen zu
+treffen.
+
+Es gibt bereits einige spannende Beispiele für sensorbasierte Robotersysteme in
+der Landwirtschaft. Autonome Traktoren sind in der Lage, sich selbstständig auf
+den Feldern zu bewegen und verschiedene Aufgaben wie das Pflügen, Säen und
+Ernten zu erledigen. Drohnen können mit Kameras ausgestattet werden, um große
+landwirtschaftliche Flächen zu überwachen und Anomalien wie Schädlingsbefall
+oder Trockenheit frühzeitig zu erkennen. Roboter zur Unkrautbekämpfung können
+mithilfe von Bilderkennungstechnologien Unkräuter von Nutzpflanzen
+unterscheiden und gezielt bekämpfen.
+
+Um den Einsatz von sensorbasierter Robotik in der Landwirtschaft weiter
+voranzutreiben, ist eine Skalierung auf Industriegröße von großer Bedeutung.
+Dies beinhaltet die Entwicklung robuster und zuverlässiger Robotersysteme, die
+den Anforderungen und Herausforderungen des landwirtschaftlichen Umfelds
+gerecht werden. Die Integration von Datenanalyse und KI-Algorithmen ermöglicht
+es den Robotern, Muster zu erkennen, Entscheidungen zu treffen und sich an
+veränderte Bedingungen anzupassen.
+
+Die Einführung von sensorbasierter Robotik und künstlicher Intelligenz in der
+Landwirtschaft hat das Potenzial, die Produktivität zu steigern, die
+Ressourceneffizienz zu verbessern und den Arbeitsaufwand für Landwirte zu
+verringern. Durch präzise und zielgerichtete Maßnahmen können Ressourcen wie
+Wasser, Düngemittel und Pestizide reduziert werden, was zu einer nachhaltigeren
+Landwirtschaft beiträgt. Zudem ermöglicht die Automatisierung den Landwirten,
+sich auf strategische Aufgaben wie die Planung und Analyse zu konzentrieren,
+anstatt sich ausschließlich mit wiederkehrenden Aufgaben zu beschäftigen.
