--- a/kapitel/infrarot.tex
+++ b/kapitel/infrarot.tex
@@ -7,8 +7,8 @@ Berühren empfindlicher Gegenstände, wie Blätter verhindert.(Abbildung
 hohe Temperaturen zu messen, ohne die Infrarotsensorik durch zu hohe
 Temperaturen zu gefährden. \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.7\textwidth]{bilder/infrarot_pflanze.jpg}
-	\caption[Infrarotaufnahme einer Pflanze]{Infrarotaufnahme einer Pflanze}
+	\includegraphics[width=0.7\textwidth]{bilder/Measuring-crop-temperatures .jpeg}
+	\caption[Infrarotaufnahme einer Pflanze]{Infrarotaufnahme einer Pflanze\cite{IRPflanze}}
 	\label{fig:infrarot_pflanze}
 \end{figure}
 
@@ -17,7 +17,7 @@ sowie die Verarbeitungselektronik. (Abbildung \ref{fig:aufbau infrarotsensor})
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.7\textwidth]{bilder/infrarotsensor.png}
-	\caption[Aufbau eines IR-Messgeräts]{Aufbau eines IR-Messgeräts}
+	\caption[Aufbau eines IR-Messgeräts]{Aufbau eines IR-Messgeräts\cite{IR}}
 	\label{fig:aufbau infrarotsensor}
 \end{figure}
 
