--- a/kapitel/nahinfrarotspektroskopie.tex
+++ b/kapitel/nahinfrarotspektroskopie.tex
@@ -11,12 +11,12 @@ Futtermischverhältnissen verwendet, da man mithilfe von NIR, wie bereits
 erwähnt, den Anteil an Fett, sowie den Anteil an Proteinen bestimmen kann, ohne
 das Futter zu beschädigen. Ein weiteres Anwendungsgebiet ist die Getreideernte,
 wobei hier der NIR-Sensor meist am Korntankrohr des Mähdreschers verbaut ist.
-(Abb. 4.1) 
+(Abbildung \ref{fig:Mähhdrescher NIR-Sensor}) 
 
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.7\textwidth]{bilder/Krone NIR Control dual.jpg}
-	\caption[Mähhdrescher mit NIR-Sensor]{NIR-Sensor am Mähdrescher}
+	\caption[Mähhdrescher mit NIR-Sensor]{NIR-Sensor am Mähdrescher\cite{Krone}}
 	\label{fig:Mähhdrescher NIR-Sensor}
 \end{figure}
 
