--- a/kapitel/schienensysteme.tex
+++ b/kapitel/schienensysteme.tex
@@ -9,11 +9,11 @@ Hier gibt es bereits ein bekanntes Beispiel aus der Heimbeet-Szene:\\
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.7\textwidth]{bilder/farmbot.png}
-	\caption[Farmbot]{Farmbot}
+	\caption[FarmBot]{FarmBot \cite{farmBotExpress}}
 	\label{fig:farmbot}
 \end{figure}
 
-Der Farmbot ist ein Schienensystem, was von der Mechanik stark an einen 3D-Drucker erinnert.
+Der Farmbot(Abbildung \ref{fig:farmbot}) ist ein Schienensystem, was von der Mechanik stark an einen 3D-Drucker erinnert.
 Verkauft wird hierbei von dem Unternehmen nur die Hardware, sprich Schienen, Motoren, Adapter, Verkabelung und ein Raspberry Pi für die Software.\\
 Die Software ist open-source, also frei im Internet für alle zugänglich, was mehrere Vorteile mit sich bringt:\\
 Die Software wird von jedem User gedownloaded und eventuell umgeschrieben. Das bedeutet die Software wird kontinuierlich Probe gelesen.
