--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -172,3 +172,62 @@ address = {Bonn}
   year={2023},
   publisher={Gesellschaft f{\"u}r Informatik eV}
 }
+@online{farmBotExpress,
+    title        = {FarmBot Express},
+    author       = {farm.bot},
+    year         = 2022,
+    url          = {https://cdn.shopify.com/s/files/1/2040/0289/files/DSC00260_2400x.JPG?7677},
+    urldate      = {2023-20-06}
+}
+@online{Tierfutter,
+    title        = {FarmBot Express},
+    author       = {farm.bot},
+    year         = 2022,
+    url          = {https://www.agrarheute.com/sites/agrarheute.com/files/2019-08/hetwinfoto-46474946.jpg},
+    urldate      = {2023-20-06}
+}
+@online{Wurst,
+    title        = {Säen und Hacken: ein Job für den Roboter},
+    author       = {Wurst Alain-Xavier},
+    year         = 2020,
+    url          = {https://www.ufarevue.ch/var/site/storage/images/9/4/6/3/293649-1-ger-CH/6039497_image_1_27_i1200.jpg},
+    urldate      = {2023-20-06}
+}
+@online{Krone,
+    title        = {Krone kooperiert mit Zumhammer},
+    author       = {agrarzeitung},
+    year         = 2021,
+    url          = {https://imagesrv.adition.com/banners/3437/files/00/27/cd/85/000002608517.jpg},
+    urldate      = {2023-20-06}
+}
+@online{IR,
+    title        = {Licht und Infrarot-Sensoren},
+    author       = {python-exemplarisch},
+    url          = {https://www.python-exemplarisch.ch/raspi/rgifs/ls1.png},
+    urldate      = {2023-20-06}
+}
+@online{IRPflanze,
+    title        = {Messung der Pflanzentemperatur},
+    author       = {redusystems},
+    url          = {https://www.redusystems.com/Articles/OR-000-999/image-thumb__645__image-text-brick/Measuring-crop-temperatures%20.jpeg},
+    urldate      = {2023-20-06}
+}
+@online{Futterroboter,
+    title        = {Im Check: Kühe mit dem Roboter füttern},
+    author       = {Ruhsamer Amelie},
+    url          = {https://www.agrarheute.com/sites/agrarheute.com/files/styles/bildergalerie_lg_2x/public/2019-08/hetwinfoto-46474946.webp},
+    urldate      = {2023-20-06}
+}
+@online{Reinigungsroboter,
+    title        = {Hygiene im Kuhstall und beim Melken},
+    author       = {Mandl Johanna},
+    url          = {https://www.fleckvieh.at/wp-content/uploads/2020/09/Spaltenroboter_agrarfoto.com_.jpg},
+    urldate      = {2023-20-06}
+}
+@article{fleckviehaustria,
+	title = "Hygiene im Kuhstall und beim Melken",
+	journal = "fleckviehaustria",
+	year = "2020",
+	url="https://www.fleckvieh.at/eutergesundheit-am-melkroboter-richtig-managen-2/",
+	urldate="2023-06-19"
+}
