--- a/kapitel/roboterfahrzeuge.tex
+++ b/kapitel/roboterfahrzeuge.tex
@@ -7,11 +7,11 @@ Teil mithilfe von künstlicher Intelligenz.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.7\textwidth]{bilder/farmdroid_fd20.png}
-	\caption[Farmdroid FD20]{Farmdroid FD20}
+	\caption[Farmdroid FD20]{Farmdroid FD20\cite{Wurst}}
 	\label{fig:farmdroid_fd20}
 \end{figure}
 
-Der Farmdroid FD20 arbeitet hierbei komplett autonom und klimaneutral durch
+Der Farmdroid FD20(Abbildung \ref{fig:farmdroid_fd20}) arbeitet hierbei komplett autonom und klimaneutral durch
 Solarpanels. Diese Solarpanels können bei guter Sonneneinstrahlung mehr als
 genug Energie für den Roboter liefern. Durch zwei zusätzliche Lithium-Ionen
 Akkus ist es möglich, dass der Farmdroid auch nach Sonnenuntergang autark
