--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -28,8 +28,6 @@
 \publishers{
 	\begin{tabular}{rl} %jedes C für eine spalte c für centered
 		Erstprüfer: & Prof. Dr. Christian Pfitzner \\
-		Betreuer:   & Prof. Dr. Christian Pfitzner \\
-		Ausgabedatum: & 23.03.2023 \\
 		Abgabedatum: & 20.06.2023 \\
 	\end{tabular}
 }
@@ -51,8 +49,9 @@
 	\newpage
 	\setcounter{page}{1}
 	\chapter{Einleitung}
+	\section{Problemstellung und Motivation}
 	\input{kapitel/einleitung}
-	\chapter{Hauptteil}
+	\section{Einführung in das Thema der Arbeit}
 	\input{kapitel/hauptteil}
 	
 	%%%%%%%%%%% ÜBERGREIFENDE SYSTEME %%%%%%%
@@ -79,9 +78,7 @@
 		\section{Saat und Ernte}
 		\input{kapitel/ernteundsaat}
 		\section{Tierpflege}
-		\input{kapitel/tierpflege}
-		\section{Bodenpflege}
-		\input{kapitel/bodenpflege}	
+		\input{kapitel/tierpflege}	
 		\section{Bewässerung}
 		\input{kapitel/bewaesserung}	
 		\section{Schädlingsbekämpfung}
