--- a/kapitel/bewaesserung.tex
+++ b/kapitel/bewaesserung.tex
@@ -2,12 +2,12 @@ Eine weitere Anwendung, welche in der Landwirtschaft in Kombination mit
 Sensorik viel Einsatz findet ist Bewässerung. Vorallem durch das immer weniger
 werdende Grundwasser, sind Pflanzen auf eine externe Bewässerung
 angewiesen.\cite{liu2018self} Bewässerung kann auf unterschiedliche Arten
-realisiert werden. Man unterscheidet zwischen Flächenbewässerung und
-punktueller Bewässerung. Flächenbewässerung wird meist mit Sprenklern
+realisiert werden.Prinzipiell wird zwischen Flächenbewässerung und
+punktueller Bewässerung unterschieden. Flächenbewässerung wird meist mit Sprenklern
 realisiert die mittig aufgestellt werden und so die Pflanzten von oben mit
-Wasser versorgen. Vorallem in sehr heißen Gebieten ist das recht ineffizient,
+Wasser versorgen. Vorallem in Gebieten mit hohen Temperaturen ist das recht ineffizient,
 da ein Großteil des Wassers auf der Pflanze verdunstet, bevor es aufgenommen
-werden kann. Ein sehr viel besseres System für die Freiflächenanwendung sind
+werden kann. Ein besseres System für die Freiflächenanwendung sind
 Schläuche, welche in Bodennähe verlegt werden. Mit vereinzelten Löchern wird
 durch den Schlauch Wasser abgegeben, welches direkt vom Boden aufgenommen
 werden kann und unter dem Pflanzen, geschützt vor der Sonne, nicht verdunstet.
@@ -20,8 +20,7 @@ Bodenfeuchtigkeit. Wenn es regnet, neigt ein bewässertes System schnell zur
 Überwässerung. Durch Bodenfeuchtigkeitssensoren (Kapitel 4.2) kann mithilfe
 eines Mikrokontrollers ein Feuchtigkeitsthreshold eingestellt werden, welcher
 sicherstellt, dass die Pflanzen genau die richtige Menge an Wasser bekommen.
-Außerdem gibt es Ansätze, zur passiven Versorgung mit Wasser, wobei man
-versucht, das Optimum aus Niederschlag und Grundwasser zu nutzen. Ein Beispiel
+Außerdem gibt es Ansätze, zur passiven Versorgung mit Wasser, wobei versucht wird, das Optimum aus Niederschlag und Grundwasser zu nutzen. Ein Beispiel
 hierfür beschäftigt sich mit der Idee ein T-Stück im Boden einzusetzen. Der
 obere Teil des T-Stücks soll das schnelle versickern des Niederschlags
 verhindern, womit die Pflanzen mehr Zeit haben diesen mithilfe der Wurzeln zu
