--- a/kapitel/bodenfeuchtigkeitssensor.tex
+++ b/kapitel/bodenfeuchtigkeitssensor.tex
@@ -1,4 +1,4 @@
-		Pflanzen brauchen Wasser. Je nach Sorte mehr oder weniger, nicht zu viel und nicht zu wenig. Um zu wissen, ob bewässert werden soll, benötigt der Roboter Bodenfeuchtigkeitssensoren.
+		Je nach Sorte brauchen Pflanzen mehr oder weniger Wasser, nicht zu viel und nicht zu wenig. Um zu wissen, ob bewässert werden soll, benötigt der Roboter Bodenfeuchtigkeitssensoren.
 		
 		\begin{description}
 			\item {Feuchtigkeitssensoren:}
