--- a/kapitel/ernteundsaat.tex
+++ b/kapitel/ernteundsaat.tex
@@ -4,10 +4,10 @@ Fahrzeuge. Das heißt ein mobiler Roboter mit Ketten- oder Reifenantrieb, würde
 das Feld abfahren und die Saat ausbringen und später im Jahr wieder ernten. \\
 Hierfür muss der Roboter einige elementare Dinge können. Er muss auch bei
 schwierigen Bodenbedinungen gerade Linien auf dem Feld fahren können. Hierfür
-kann man die Antriebsart anpassen, sowie die Reifen durch Ketten ersetzen. Eine
+kann die Antriebsart angepasst, sowie die Reifen durch Ketten ersetzt werden. Eine
 weitere Herausforderung besteht in der Ausbringung des Saatguts in den Boden.
 Die einfachste Art wäre das Bohren eines Lochs, in welches das Saatkorn fällt.
-Ein sehr trockener, steiniger Boden hat jedoch eine andere Beschaffenheit als
+Ein trockener, steiniger Boden hat jedoch eine andere Beschaffenheit als
 ein feuchter erdiger Boden. Dafür müssen unterschiedliche Aktoren zur Verfügung
 stehen. Mit einem Kraftsensor kann der Roboter die Kraft messen, welche er
 benötigt, um in den Boden vorzudringen. Anhand dessen kann er ein Bohrgerät für
@@ -20,6 +20,5 @@ die Aktorik an. Das liegt daran, dass alle Pflanzen bei der Ernte ziemlich
 gleich groß sind, innerhalb ihrer Sorte, welche im Vornherein bekannt ist.
 Dabei werden die Pflanzen komplett "abgeschnitten". Man könnte jedoch bereits
 beim Erntevorgang durch eine Bildverarbeitung beschädigte, kaputte Ernte
-aussortieren. Hierfür wäre vorallem ein sehr gutes Kamerasystem nötig, wobei
-man jedoch Kosten-Nutzen hierbei beachten sollte, da ein komplexes Kamerasystem
-schnell sehr teuer werden kann.
+aussortieren. Hierfür wäre vorallem ein gutes Kamerasystem nötig, wobei jedoch der Kosten-Nutzen-Faktor hierbei beachtet werden sollte, da ein komplexes Kamerasystem
+schnell hohe Kosten verursacht.
