--- a/kapitel/fazit.tex
+++ b/kapitel/fazit.tex
@@ -1,11 +1,11 @@
-Zusammenfassend kann man davon sprechen, dass auch die Landwirtschaft von dem
+Zusammenfassend kann davon gesprochen werden, dass auch die Landwirtschaft von dem
 Umschwung in die Automatisierung von Prozessen betroffen ist. Vorallem in
 dieser Branche gibt es viele gute Möglichkeiten, Systeme mithilfe von Sensoren
 zu überwachen und zu beeinflussen. Auch mit dem Hintergrund des
 Bevölkerungswachstums und der damit einhergehenden Steigerung des Mangel an
 Lebensmitteln ist es besonders wichtig, jede Chance zu nutzen, die
 Landwirtschaft so effizient wie möglich zu gestalten. Auch den Aspekt, der
-Zerstörung des fruchtbaren Boden muss man beachten, beim Gedanken an die
+Zerstörung des fruchtbaren Boden muss beachtet werden, beim Gedanken an die
 Ernährung der immer größer werdenden Menschheit.\cite{rainer2003diskurs}
 Systeme wie der Farmbot helfen, jeden freien Platz sinnvoll zu nutzen und
 animieren die Menschen, auch Zuhause Pflanzen selbst zu züchten. Jedoch muss
