--- a/kapitel/infrarot.tex
+++ b/kapitel/infrarot.tex
@@ -3,12 +3,12 @@ Sie bietet einige erhebliche Vorteile, durch die Fähigkeit zur berührungslosen
 Temperaturmessung. Zum einen wird der zu messende Gegenstand in keinerlei Weise
 beeinflusst, was zum Beispiel die Gefahr der physischem Zerstörung, durch
 Berühren empfindlicher Gegenstände, wie Blätter verhindert.(Abbildung
-\ref{fig:infrarot_pflanze}) Die Entfernung zum Messpunkt ermöglicht auch, sehr
+\ref{fig:infrarot_pflanze}) Die Entfernung zum Messpunkt ermöglicht auch, 
 hohe Temperaturen zu messen, ohne die Infrarotsensorik durch zu hohe
 Temperaturen zu gefährden. \begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.7\textwidth]{bilder/Measuring-crop-temperatures .jpeg}
-	\caption[Infrarotaufnahme einer Pflanze]{Infrarotaufnahme einer Pflanze\cite{IRPflanze}}
+	\caption[Infrarotaufnahme einer Pflanze]{Infrarotaufnahme einer Pflanze \cite{IRPflanze}}
 	\label{fig:infrarot_pflanze}
 \end{figure}
 
@@ -17,7 +17,7 @@ sowie die Verarbeitungselektronik. (Abbildung \ref{fig:aufbau infrarotsensor})
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.7\textwidth]{bilder/infrarotsensor.png}
-	\caption[Aufbau eines IR-Messgeräts]{Aufbau eines IR-Messgeräts\cite{IR}}
+	\caption[Aufbau eines IR-Messgeräts]{Aufbau eines IR-Messgeräts \cite{IR}}
 	\label{fig:aufbau infrarotsensor}
 \end{figure}
 
@@ -27,14 +27,14 @@ thermophile Detektoren) besitzen sensitive Flächen, welche von der Energie der
 infraroten Strahlung erwärmt werden. Sie sind genau und reagieren schnell,
 zudem arbeiten thermische Detektoren bei Raumtemperatur, es wird also keine
 zusätzliche Kühlelektronik benötigt. Wenn es eine noch höhere
-Temperaturempfindlichkeit benötigt, wobei man von $<$20 mK spricht, werden
-Quantendetektoren. Jedoch müssen diese gekühlt werden, da sie sonst ein hohes
+Temperaturempfindlichkeit benötigt, wobei hier von $<$20 mK gesprochen wird, werden
+Quantendetektoren eingesetzt. Jedoch müssen diese gekühlt werden, da sie sonst ein hohes
 Eigenrauschen aufweisen.\cite{may2015transiente}
 
 Funktionsweise von Infrarotthermographie: \\ Messgegenstände mit einer
-Temperatur von $>$ 900K strahlen Energie ab, der in mithilfe von
+Temperatur von $>$900 K strahlen Energie ab, die mithilfe von
 Wärmebildtechnik sichtbar gemacht werden kann und so als Bild, für den Menschen
 sichtbar dargestellt werden kann. Hierzu werden die Spektralbereiche
 Nahinfrarot(NIR), mittleres Infrarot (MIR) und langes Infrarot (LIR)
 betrachtet. Diese Spektren teilen sich in drei Teile im Bereich von 780 bis
-1400nm auf.\cite{schuster2004infrarotthermographie}
+1400 nm auf.\cite{schuster2004infrarotthermographie}
