--- a/kapitel/künstliche Intelligenz.tex
+++ b/kapitel/künstliche Intelligenz.tex
@@ -1,4 +1,4 @@
-Wie auch in allen Bereichen, ist auch in der Landwirtschaft gerade eine sehr
+Wie auch in allen Bereichen, ist auch in der Landwirtschaft gerade eine
 starke Entwicklung von künstlicher Intelligenz zu erkennen. Künstliche
 Intelligenz wird dabei verwendet, um große Datenmengen von Sensoren in der
 Landwirtschaft zu nutzen, um neuronale Netze zu trainieren. Meist findet KI
@@ -21,7 +21,7 @@ zunehmen, da bereits jetzt 20-40 Prozent der Pflanzen durch Unkraut und
 ähnliches absterben. Zudem wird die Wettervorhersage immer mehr durch den
 Einsatz von künstlicher Intelligenz verbessert. Durch die Vielzahl an
 Satelliten steht eine extreme Menge an Wetterdaten zur Verfügung, die
-regelmäßig geupdated wird. Da die Ernte sehr anfällig gegenüber Gewitter,
+regelmäßig geupdated wird. Da die Ernte äußerst anfällig gegenüber Gewitter,
 speziell Hagel ist, haben mehrere Projekte, wie zum Beispiel das US National
 Oceanic and Atmospheric Administration bereits begonnen, sich mit dem regionen-
 und zeitabhängigen Wetterprognosen zu befassen.\cite{wennker2020kunstliche}
