--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -231,3 +231,27 @@ address = {Bonn}
 	url="https://www.fleckvieh.at/eutergesundheit-am-melkroboter-richtig-managen-2/",
 	urldate="2023-06-19"
 }
+@article{raff1987did,
+  title={Did Henry Ford pay efficiency wages?},
+  author={Raff, Daniel MG and Summers, Lawrence H},
+  journal={journal of Labor Economics},
+  volume={5},
+  number={4, Part 2},
+  pages={S57--S86},
+  year={1987},
+  publisher={University of Chicago Press}
+}
+
+@online{Drohne,
+    title        = {DJI und die Landwirtschaft},
+    author       = {DJI},
+    url          = {https://dji-official-fe.djicdn.com/dps/92018744568392976eaed6bad09a9f1f.jpg},
+    urldate      = {2023-20-06}
+}
+
+@online{reh,
+    title        = {Wildtiersuche und Rehkitzrettung},
+    author       = {skyoptic},
+    url          = {https://www.skyoptik.at/wp-content/uploads/2020/06/dji-mavic-2-enterprise-dual-rehkitzrettung-und-wildtiersuche-paket28.jpg},
+    urldate      = {2023-20-06}
+}
