--- a/kapitel/einleitung.tex
+++ b/kapitel/einleitung.tex
@@ -16,7 +16,7 @@ hierbei auch zum Wohl der Tiere durch Futterverpflegung und Stallreinigung
 beigetragen wird. \\Auch in anderen Bereichen ist die Frage nach schnellen,
 zuverlässigen Massenproduktionen bereits seit mehreren Jahrzehnten diskutiert.
 \\Vorallem die Automobilindustrie hat bereits früh begonnen sich mit
-Automatisierung zu beschäftigen. Erste Ansätze gab es hier bereits 1913 durch
+Automatisierung zu beschäftigen. Erste Ansätze gab es hier bereits 1913\cite{raff1987did} durch
 Henry Ford, welcher die ersten Autos auf dem Fließband zusammenbauen ließ.
 Dieses System wurde über die Jahrzehnte soweit ausgebaut, dass heutzutage
 bereits viele Industrieroboter die Bandarbeit nahezu komplett autonom
