--- a/kapitel/bewaesserung.tex
+++ b/kapitel/bewaesserung.tex
@@ -46,3 +46,4 @@ Interzeption durch folgende Formel berechnet werden: \\
 \end{equation}
 
 $ET_{ref}$ beschreibt dabei die Referenz-Evapotranspiration, welche die mögliche Grasvegetation bei ständiger Bodensättigung darstellt.\cite{keilholz2019bewasserung}
+Mit solchen Berechnungen können Computersysteme den Wasserkreislauf und die Auswirkungen der Landwirtschaft darstellen und verbessert nutzen.
