--- a/kapitel/bodenfeuchtigkeitssensor.tex
+++ b/kapitel/bodenfeuchtigkeitssensor.tex
@@ -1,13 +1,14 @@
-		Je nach Sorte brauchen Pflanzen mehr oder weniger Wasser, nicht zu viel und nicht zu wenig. Um zu wissen, ob bewässert werden soll, benötigt der Roboter Bodenfeuchtigkeitssensoren.
-		
-		\begin{description}
-			\item {Feuchtigkeitssensoren:}
-			\begin{itemize}
-				\item {\textit{kapazitive Sensoren}}\\
-				\input{kapitel/kapazitive Sensoren.tex}
-				\item {\textit{Leitfähigkeitssensoren}}\\
-				Wie die Meisten bereits wissen, leitet Wasser Strom. Natürlich lässt sich somit über die Leitfähigkeit der Gehalt an Wasser im Boden feststellen.\\
-				Das heißt, man leitet sich wie bei Thermistoren und RTDs die Größe über den Widerstand her. Das ist auch der Grund, weshalb es viele Sensoren gibt, die Feuchtigkeit und Temperatur gleichzeitig ermitteln können.
-			\end{itemize}
-		\end{description}
-		
+Je nach Sorte brauchen Pflanzen mehr oder weniger Wasser, nicht zu viel und
+nicht zu wenig. Um zu wissen, ob bewässert werden soll, benötigt der Roboter
+Bodenfeuchtigkeitssensoren.
+
+\begin{description}
+	\item {Feuchtigkeitssensoren:}
+	      \begin{itemize}
+		      \item {\textit{kapazitive Sensoren}}\\
+		            \input{kapitel/kapazitive Sensoren.tex}
+		      \item {\textit{Leitfähigkeitssensoren}}\\
+		            Wie die Meisten bereits wissen, leitet Wasser Strom. Natürlich lässt sich somit über die Leitfähigkeit der Gehalt an Wasser im Boden feststellen.\\
+		            Das heißt, man leitet sich wie bei Thermistoren und RTDs die Größe über den Widerstand her. Das ist auch der Grund, weshalb es viele Sensoren gibt, die Feuchtigkeit und Temperatur gleichzeitig ermitteln können.
+	      \end{itemize}
+\end{description}
