--- a/kapitel/bodenpflege.tex
+++ b/kapitel/bodenpflege.tex
@@ -1,1 +1,3 @@
-Zur Bodenpflege gehören die Analyse von Mineralstoffen, Bodendichte und Bodenbeschaffenheit. Wie der Name schon sagt, wird bei dieser Arbeit ein Mineralwertsensor benötigt.\\
+Zur Bodenpflege gehören die Analyse von Mineralstoffen, Bodendichte und
+Bodenbeschaffenheit. Wie der Name schon sagt, wird bei dieser Arbeit ein
+Mineralwertsensor benötigt.\\
