--- a/kapitel/künstliche Intelligenz.tex
+++ b/kapitel/künstliche Intelligenz.tex
@@ -10,14 +10,14 @@ Beispiel Drohnen, Satelliten oder Ultraleichtflugzeugen. Ein gutes Beispiel
 hierfür ist das Start-up Taranis.Taranis benutzt Drohnen, welche mit bis zu
 200 km/h extrem hochauflösende Aufnahmen von Feldern machen können. In
 Verbindung mithilfe von Satelliten und Flugzeugen überwachen sie so 80.000
-Quadratkilometer Agrarfläche in mehreren Ländern. Diese Pflanzen werden
+$km^2$ Agrarfläche in mehreren Ländern. Diese Pflanzen werden
 überwacht, und der Landwirt wird sofort informiert, sobald eine Pflanze
 beschädigt wird. Somit kann dieser die Pflanze im Frühstadium sofort entfernen
 und noch zur richtigen Zeit eine Neue anpflanzen. Zudem können die
 Drohnenbilder mithilfe der von Tensorflow unterstützen KI durch ihre hohe
 Auflösung sogar Insekten und andere Schädling erkennen, bevor die Pflanzen von
 diesen zerstört werden. Diese Technologie wird in Zukunft noch an Bedeutung
-zunehmen, da bereits jetzt 20-40 Prozent der Pflanzen durch Unkraut und
+zunehmen, da bereits jetzt 20-40 \% der Pflanzen durch Unkraut und
 ähnliches absterben. Zudem wird die Wettervorhersage immer mehr durch den
 Einsatz von künstlicher Intelligenz verbessert. Durch die Vielzahl an
 Satelliten steht eine extreme Menge an Wetterdaten zur Verfügung, die
