--- a/kapitel/schaedlingsbekaempfung.tex
+++ b/kapitel/schaedlingsbekaempfung.tex
@@ -15,7 +15,7 @@ Konzept für Gewächshäuser entwickelt. Dieses besteht aus einem Roboterarm,
 welcher mit Klebeflächen ausgestattet ist. Dieser bewegt sich über die
 Pflanzen, während die Insekten mit Druckluft aufgeschreckt werden und daraufhin
 in die Klebeflächen fliegen und dort festkleben. Der Aufbau ist in Abbildung
-\ref{fig:schaedlingsbekaempfung} nochmals exemplarisch dargestellt.\cite{hoing2020entwicklung}
+\ref{fig:schaedlingsbekaempfung} nochmals exemplarisch dargestellt:\cite{hoing2020entwicklung}
 
 \begin{figure}[!h]
     \centering
