--- a/kapitel/drohnen.tex
+++ b/kapitel/drohnen.tex
@@ -20,7 +20,14 @@ einen festen Bezugspunkt für das Auffüllen der Flüssigkeit, ähnlich einer
 Ladestation eines Rasenmähers. \\ Ein zusätzliches weit verbreitetes
 Einsatzgebiet von Drohnen im Allgemeinen ist die Überwachung: \\Auf den Feldern
 wird dies häufig in Kombination mit Wärmebildkameras dazu verwendet, Tiere in
-den Feldern aufzuspüren. Durch die Möglichkeit,
+den Feldern aufzuspüren.(Abbildung \ref{fig:Wärmebild eines Rehs}) Durch die Möglichkeit,
 das Feld aus großen Höhen zu beobachten ermöglicht es dem Farmer, Rehe,
 Wildschweine und andere Schädlinge schnell und effektiv in seinem Feld
 aufzuspüren.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{bilder/rteh.jpg}
+	\caption[Wärmebild eines Rehs]{Wärmebild eines Rehs \cite{reh}}
+	\label{fig:Wärmebild eines Rehs}
+\end{figure}
