--- a/kapitel/bodenfeuchtigkeitssensor.tex
+++ b/kapitel/bodenfeuchtigkeitssensor.tex
@@ -8,7 +8,13 @@ Bodenfeuchtigkeitssensoren.
 		      \item {\textit{kapazitive Sensoren}}\\
 		            \input{kapitel/kapazitive Sensoren.tex}
 		      \item {\textit{Leitfähigkeitssensoren}}\\
-		            Wie die Meisten bereits wissen, leitet Wasser Strom. Natürlich lässt sich somit über die Leitfähigkeit der Gehalt an Wasser im Boden feststellen.\\
-		            Das heißt, man leitet sich wie bei Thermistoren und RTDs die Größe über den Widerstand her. Das ist auch der Grund, weshalb es viele Sensoren gibt, die Feuchtigkeit und Temperatur gleichzeitig ermitteln können.
+		            Diese Sensoren bestehen in der Regel aus einem feuchtigkeitsempfindlichen Material, das zwischen zwei Elektroden platziert ist. 
+					Wenn Feuchtigkeit in das Material eindringt, verändert sich die elektrische Leitfähigkeit und somit auch der Widerstand. 
+					Je feuchter das Material ist, desto niedriger wird der Widerstand.
+		            Um den Feuchtigkeitsgehalt zu messen, wird eine elektrische Spannung an die
+		            Elektroden angelegt, und der resultierende Strom oder die Spannung über dem
+		            Sensor wird gemessen. Durch die Messung des Widerstands kann auf die
+		            Feuchtigkeit geschlossen werden. Dieses Signal kann dann in elektronische
+		            Schaltungen oder Mikrocontroller eingespeist und weiterverarbeitet werden.
 	      \end{itemize}
 \end{description}
