--- a/kapitel/ernteundsaat.tex
+++ b/kapitel/ernteundsaat.tex
@@ -12,13 +12,13 @@ ein feuchter erdiger Boden. Dafür müssen unterschiedliche Aktoren zur Verfügu
 stehen. Mit einem Kraftsensor kann der Roboter die Kraft messen, welche er
 benötigt, um in den Boden vorzudringen. Anhand dessen kann er ein Bohrgerät für
 die Löcher wählen. Diese verschiedenen Bohrer können zum Beispiel direkt am
-Roboter angebracht sein.\cite{naik2016precision} Ein wichtiger für das Sähen benötigter Sensor ist ein
+Roboter angebracht sein.\cite{naik2016precision} Ein weiter wichtiger, für das Sähen benötigter Sensor, ist ein
 Ultraschallsensor, zum Messen der Bodenentfernung. Damit können die Samen auf
 die exakte Tiefe in den Boden eingebracht werden.\\ Beim Ernten kommt es
-vorallem auf die Sorte an. Hierbei kommt es weniger auf die Sensorik, als auf
+vor allem auf die Sorte an. Hierbei kommt es weniger auf die Sensorik, als auf
 die Aktorik an. Das liegt daran, dass alle Pflanzen bei der Ernte ziemlich
 gleich groß sind, innerhalb ihrer Sorte, welche im Vornherein bekannt ist.
-Dabei werden die Pflanzen komplett "abgeschnitten". Man könnte jedoch bereits
+Dabei werden die Pflanzen komplett abgeschnitten. Man könnte jedoch bereits
 beim Erntevorgang durch eine Bildverarbeitung beschädigte, kaputte Ernte
 aussortieren. Hierfür wäre vor allem ein gutes Kamerasystem nötig, wobei jedoch der Kosten-Nutzen-Faktor hierbei beachtet werden sollte, da ein komplexes Kamerasystem
 schnell hohe Kosten verursacht.
